# meet-scribe

./: .gitignore  AUDIO_CAPTURE_TODO.md  CHANGELOG.md  CLAUDE.md  DEVELOPER_GUIDE.md  LICENSE  PROJECT_STATUS.md  README.md  RELEASING.md  package-lock.json  package.json
.claude/: settings.local.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_initial.sql  002_add_audio_file_path.sql  003_add_prompt_templates.sql  004_add_model_overrides.sql  005_add_speaker_label_to_transcripts.sql  006_add_fts5_search.sql  007_add_language_to_meetings.sql
apps/desktop/src-tauri/src/: error.rs  main.rs
apps/desktop/src-tauri/src/adapters/: mod.rs
apps/desktop/src-tauri/src/adapters/audio/: linux.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/adapters/detection/: linux.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/adapters/services/: mod.rs
apps/desktop/src-tauri/src/adapters/services/asr/: assemblyai.rs  deepgram.rs  deepgram_streaming.rs  mod.rs
apps/desktop/src-tauri/src/adapters/storage/: mod.rs  sqlite.rs
apps/desktop/src-tauri/src/commands/: config.rs  detection.rs  export.rs  llm.rs  meeting.rs  mod.rs  participant.rs  search.rs  streaming.rs  transcription.rs
apps/desktop/src-tauri/src/domain/: mod.rs  models.rs  prompts.rs
apps/desktop/src-tauri/src/ports/: audio.rs  detection.rs  llm.rs  mocks.rs  mod.rs  storage.rs  transcription.rs
apps/desktop/src-tauri/src/utils/: audio_file.rs  keychain.rs  mod.rs
(+39 files in other folders)
