[package]
name = "meet-scribe"
version = "0.1.0"
description = "Bot-free meeting assistant for Windows and Linux"
authors = ["srprasanna"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [], default-features = false }

[dependencies]
# Tauri core
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Secret storage (OS keychain)
keyring = { version = "2.3", features = ["platform-all"] }

# Audio encoding
hound = "3.5"

# Time utilities
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"

[dev-dependencies]
# Testing
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
